# libfprint-vfs_proprietary-driver

./: build.sh  meson.build  post_install.py
vfs_proprietary/: capture_helper.c  vfs_proprietary.c
